tests/kubernetes/custom-5.2.9/noncompliant/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noncompliant-pod-with-caps
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        capabilities:
          add:
            - SYS_TIME
